# syntalos

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MazeAmaze.pro  NEWS.md  README.md  RELEASE  autoformat.py  config.h.in  meson.build  meson_options.txt
contrib/: CMakeLists.txt  upload-ppa-package.sh
contrib/MuxFirmata/: Boards.h  MuxFirmata.ino  MuxShield.cpp
contrib/ci/: Dockerfile  build_and_test.sh  opencv_quickbuild.sh
contrib/cmake/: FindFFmpeg.cmake
contrib/debian/: changelog  control  copyright  not-installed  rules  syntalos-hwsupport.install  syntalos.install
contrib/flatpak/: autobuild-bundle.sh  io.github.bothlab.syntalos.yaml  org.syntalos.syntalos.yaml
contrib/neuroscopify/: ma-view-neuroscope.py
contrib/subprojects/: .gitignore
contrib/testpulse-generator/: CMakeLists.txt  pulsegen.c
data/: CMakeLists.txt  COPYING-ICONS  greetings.json  greetings.toml  io.github.bothlab.syntalos.metainfo.xml  io.github.syntalos.metainfo.xml  mazeamaze.desktop  meson.build  org.syntalos.syntalos.metainfo.xml  orig-pyscript-sample.py  pyscript-sample.py  render-appicons.sh  resources.qrc  syntalos.desktop  whatsnew.toml
data/tmpfiles.d/: syntalos.conf
data/words/: adjectives.txt  animals.txt  gen_word_header.py  intermediate.txt  nouns.txt
modules/: CMakeLists.txt  meson.build  modsetup.meson  module-lib-def.toml.in  update-symod-meson.py
modules/audiosource/: audiosettingsdialog.cpp  audiosettingsdialog.h  audiosettingsdialog.ui  audiosrcmodule.cpp  audiosrcmodule.h  meson.build
modules/camera-arv/: 70-syntalos-cameras.rules  90-syntalos-cameras.rules  araviscameramodule.cpp  araviscameramodule.h  configwindow.cpp  configwindow.h  configwindow.ui  getmtu_linux.h  glvideowidget.cpp  glvideowidget.h  meson.build  roicombobox.cpp  roicombobox.h
modules/camera-flir/: flircamera.cpp  flircamera.h  flircameramod.cpp  flircameramod.h  flircamsettingsdialog.cpp  flircamsettingsdialog.h  flircamsettingsdialog.ui  meson.build
modules/camera-generic/: camera.cpp  camera.h  genericcameramodule.cpp  genericcameramodule.h  genericcamerasettingsdialog.cpp  genericcamerasettingsdialog.h  genericcamerasettingsdialog.ui  meson.build
modules/camera-lc/: lccamera.cpp  lccamera.h  lcsettingsdialog.cpp  lcsettingsdialog.h  lcsettingsdialog.ui  libcameramodule.cpp  libcameramodule.h  meson.build
modules/camera-tis/: CMakeLists.txt  caps.cpp  caps.h  capswidget.cpp  capswidget.h  cdeviceselectiondlg.cpp  cdeviceselectiondlg.h  cpropertiesdialog.cpp  cpropertiesdialog.h  definitions.h  device.cpp  device.h  devicedialog.cpp  devicedialog.h  devicedialog.ui  devicewidget.cpp  devicewidget.h  indexer.cpp  indexer.h  meson.build  propertiesbox.cpp  propertiesbox.h  propertiesbox.ui  propertywidget.cpp  propertywidget.h  propertyworker.cpp  propertyworker.h  tcamcamera.cpp  tcamcamera.h  tcamcollection.cpp  tcamcollection.h  tcamcontroldialog.cpp  tcamcontroldialog.h  tcamcontroldialog.ui  tcamslider.cpp  tcamslider.h  tcamspinbox.cpp  tcamspinbox.h  tiscamera.qrc  tiscameramodule.cpp  (+1 more)
modules/camera-ueye/: CMakeLists.txt  meson.build  ueyecamera.cpp  ueyecamera.h  ueyecameramodule.cpp  ueyecameramodule.h  ueyecamerasettingsdialog.cpp  ueyecamerasettingsdialog.h  ueyecamerasettingsdialog.ui
modules/canvas/: CMakeLists.txt  canvasmodule.cpp  canvasmodule.h  canvassettingsdialog.cpp  canvassettingsdialog.h  canvassettingsdialog.ui  canvaswindow.cpp  canvaswindow.h  histogramwidget.cpp  histogramwidget.h  imageviewwidget.cpp  imageviewwidget.h  meson.build
modules/cpp-workbench/: autobuild.sh  cppwbenchmodule.cpp  cppwbenchmodule.h  cppwbres.qrc  example-template.cpp  meson.build  template.meson
modules/deeplabcut-live/: dlc-live.py  module.toml  requirements.txt
modules/devel.clock/: clockmodule.cpp  clockmodule.h  clocksettingsdialog.cpp  clocksettingsdialog.h  meson.build
modules/devel.datasource/: CMakeLists.txt  datasourcemodule.cpp  datasourcemodule.h  meson.build
modules/devel.datasst/: datasstmodule.cpp  datasstmodule.h  meson.build
modules/devel.latencytest/: latencytestmodule.cpp  latencytestmodule.h  meson.build
modules/devel.pyooptest/: meson.build  pyooptestmodule.cpp  pyooptestmodule.h
modules/example-cpp/: examplemodule.cpp  examplemodule.h  meson.build
modules/example-mlink/: example-main.cpp  meson.build  module.toml
modules/example-py/: meson.build  mod-main.py  module.toml
modules/firmata-io/: CMakeLists.txt  firmataiomodule.cpp  firmataiomodule.h  firmatasettingsdialog.cpp  firmatasettingsdialog.h  firmatasettingsdialog.ui  meson.build
modules/firmata-userctl/: firmatactldialog.cpp  firmatactldialog.h  firmatauserctlmod.cpp  firmatauserctlmod.h  meson.build
modules/flowmeter/: flowmetermodule.cpp  flowmetermodule.h  meson.build
modules/galdur-stim/: galdurmodule.cpp  galdurmodule.h  galdursettingsdialog.cpp  galdursettingsdialog.h  galdursettingsdialog.ui  labrstimclient.cpp  labrstimclient.h  meson.build
modules/hwline-userctl/: hwlinectldialog.cpp  hwlinectldialog.h  hwlinectldialog.ui  hwlineuserctlmod.cpp  hwlineuserctlmod.h  meson.build
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractmodule.cpp  abstractmodule.h  appstyle.cpp  appstyle.h  arduinofirmata.cpp  arduinofirmata.h  barrier.h  chiporderwidget.cpp  chiporderwidget.h  commentdialog.cpp  commentdialog.h  commentdialog.ui  cpuaffinity.cpp  cpuaffinity.h  edlstorage.cpp  edlstorage.h  eigenaux.h  elidedlabel.cpp  elidedlabel.h  engine.cpp  engine.h  entitylistmodels.cpp  entitylistmodels.h  exportdirutils.cpp  exportdirutils.h  flowgraphview.cpp  flowgraphview.h  globalconfig.cpp  globalconfig.h  globalconfigdialog.cpp  globalconfigdialog.h  globalconfigdialog.ui  hrclock.cpp  hrclock.h  imagesinkmodule.cpp  imagesinkmodule.h  (+85 more)
src/datactl/: dcutils.h  (+31 more)
tests/: CMakeLists.txt  lsan-suppr.txt  lsan-suppress.txt  meson.build  run-project-test.py  test-basic.cpp  test-edlstorage.cpp  test-metavalue.cpp  test-streamperf.cpp  test-timer.cpp  test-tsyncfile.cpp  testbarrier.h
(+1215 files in other folders)
