option('optimize-avx',
    type : 'boolean',
    value : true,
    description : 'Enable AVX2 instructions when building in release mode'
)
option('optimize-native',
    type : 'boolean',
    value : false,
    description : 'Optimize for native CPU when in release mode'
)
option('udevdir',
    type: 'string',
    value: '',
    description: 'Directory for udev rules'
)

option('modules',
    type: 'array',
    choices: ['camera-flir',  # FLIR camera module using the Spinnaker API
              'camera-ueye',  # uEye camera module
              'camera-tis',   # Camera module for The Imaging Source cameras
              'miniscope'     # UCLA Miniscope module
    ],
    value : ['camera-tis',
             'miniscope'
    ],
    description: 'Select modules to enable.'
)

#
# For development
#
option('tracing',
       type : 'boolean',
       value : false,
       description : 'Compile with -pg flag for function tracing & profiling'
)
option('maintainer',
       type : 'boolean',
       value : false,
       description : 'Enable maintainer mode (use strict compiler flags, e.g. -Werror)'
)
