option('optimize-modern-amd64',
    type : 'boolean',
    value : true,
    description : 'Use modern x86-64 CPU features (x86-64-v3) if the CPU architecture ' +
                  'and compiler support this feature.'
)
option('optimize-native',
    type : 'boolean',
    value : false,
    description : 'Optimize for native CPU when in release mode'
)
option('udevdir',
    type: 'string',
    value: '',
    description: 'Directory for udev rules'
)

option('modules',
    type: 'array',
    choices: ['camera-flir',  # FLIR camera module using the Spinnaker API
              'camera-tis',   # Camera module for The Imaging Source cameras
              'camera-ueye',  # uEye camera module
              'intan-rhx',    # Intan RHX DAQ module
              'miniscope',    # UCLA Miniscope module
              'plot',         # Plotting modules using ImGui
    ],
    value : ['camera-tis',
             'intan-rhx',
             'miniscope',
             'plot',
    ],
    description: 'Select modules to enable.'
)

#
# For development
#
option('tracing',
       type : 'boolean',
       value : false,
       description : 'Compile with -pg flag for function tracing & profiling'
)
option('maintainer',
       type : 'boolean',
       value : false,
       description : 'Enable maintainer mode (use strict compiler flags, e.g. -Werror)'
)
